Added recipe page content for latte

--- a/recipes/latte.html
+++ b/recipes/latte.html
@@ -7,5 +7,21 @@
 </head>
 <body>
     <h1>Latte</h1>
+    <img src="../img/latte.jpg" alt="latte">
+
+    <h2>Description</h2>
+        <p>This is a latte. It is super good. So so so good.</p>
+
+    <h2>Ingredients</h2>
+        <ul>
+            <li>Milk</li>
+            <li>Espresso coffee grounds</li>
+        </ul>
+
+    <h2>Steps</h2>
+        <ol>
+            <li>Make espresso and pour in cup</li>
+            <li>Pour in milk and make pretty</li>
+        </ol>
 </body>
 </html>
