--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/latte.html">Latte</a>
+            <ul>
+                <li><a href="recipes/latte.html">Latte</a></li>
+                <li><a href="recipes/matcha.html">Matcha</a></li>
+            </ul>
     </body>
 </html>
